Restructing backend archicture
Added demo api for testing
cache service is modified

--- a/app/config/config_app.ini
+++ b/app/config/config_app.ini
@@ -66,10 +66,10 @@ DB_TIMEZONE = 'Asia/Dhaka'
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 ; Local Cache Flag [ 0=OFF , 1=ON ]
-LOCAL_KVS_FLAG = 1
+LOCAL_CACHE_FLAG = 0
 
 ; Local Cache Filepath 
-LOCAL_KVS_PATH = 'C:\xampp\htdocs\template-api\flight\local_kvs.dat'
+LOCAL_CACHE_PATH = 'C:\xampp\htdocs\template-api\flight\cache'
 
 ; Memcache Key Prefix
 MEMCACHE_PREFIX = 'template_api_'
