Cache system changed
Added new cache system PhpFileCache

--- a/app/config/config_app.ini
+++ b/app/config/config_app.ini
@@ -66,7 +66,7 @@ DB_TIMEZONE = 'Asia/Dhaka'
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 ; Local Cache Flag [ 0=OFF , 1=ON ]
-LOCAL_CACHE_FLAG = 0
+LOCAL_CACHE_FLAG = 1
 
 ; Local Cache Filepath 
 LOCAL_CACHE_PATH = 'C:\xampp\htdocs\template-api\flight\cache'
@@ -88,5 +88,5 @@ MEMCACHED_PORT = '11211'
 APPLICATION_LOG = 0
 
 ; Server Application Log Filepath
-LOG_FILE = 'C:\xampp\htdocs\template-api\flight\app.log'
+LOG_FILE = 'C:\xampp\htdocs\template-api\flight\log\app.log'
 
