API structure updated
Existing API modified
Response structure updated
Token library functions updated
Added Console for API testing
DB resource updated

--- a/app/config/config_app.ini
+++ b/app/config/config_app.ini
@@ -10,10 +10,10 @@ ENV = 'development'
 PRODUCTION_ENV = 0
 
 ; Token Verification Secret Key
-USER_SESSION_HEADER_KEY = 'X-USER-SESSIONID'
+;USER_SESSION_HEADER_KEY = 'X-USER-SESSIONID'
 
 ; Token Verification Secret Key
-REQUEST_TOKEN_HEADER_KEY = 'X-SOL-TOKEN'
+REQUEST_TOKEN_HEADER_KEY = 'X-API-TOKEN'
 
 ; Token Verification Secret Key
 REQUEST_TOKEN_SECRET = '0123456789'
