--- a/app/config/example.config_app.ini
+++ b/app/config/example.config_app.ini
@@ -63,10 +63,10 @@ DB_TIMEZONE = 'Asia/Dhaka'
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 ; Local Cache Flag [ 0=OFF , 1=ON ]
-LOCAL_KVS_FLAG = 0
+LOCAL_CACHE_FLAG = 0
 
 ; Local Cache Filepath 
-LOCAL_KVS_PATH = 'C:\xampp\htdocs\rest-api\local_kvs.dat'
+LOCAL_CACHE_PATH = 'C:\xampp\htdocs\rest-api\cache'
 
 ; Memcache Key Prefix
 MEMCACHE_PREFIX = 'template_api_'
@@ -85,5 +85,5 @@ MEMCACHED_PORT = '11211'
 APPLICATION_LOG = 0
 
 ; Server Application Log Filepath
-LOG_FILE = 'C:\xampp\htdocs\template-api\flight\temp\app.log'
+LOG_FILE_PATH = 'C:\xampp\htdocs\rest-api\log'
 
