--- a/app/config/example.config_app.ini
+++ b/app/config/example.config_app.ini
@@ -10,7 +10,7 @@ ENV = 'development'
 PRODUCTION_ENV = 0
 
 ; Request Token Key Passed in HTTP Header
-REQUEST_TOKEN_HEADER_KEY = 'X-HEADER-TOKEN'
+REQUEST_TOKEN_HEADER_KEY = 'X-API-TOKEN'
 
 ; Token Verification Secret Key e.g XXX111
 REQUEST_TOKEN_SECRET = ''
