Skeleton structure update

--- a/app/config/example.config_app.ini
+++ b/app/config/example.config_app.ini
@@ -41,7 +41,7 @@ SUPPORT_MAIL_TO = 'support@example.com'
 DB_HOST = 'localhost'
 
 ; Database Name
-DB_NAME = 'test'
+DB_NAME = 'rest-api'
 
 ; Database User name
 DB_USER = 'root'
