--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,15 @@
 {
     "require": {
         "mikecao/flight": "^1.3",
-        "firebase/php-jwt": "^5.0"
+        "firebase/php-jwt": "^5.0",
+        "wruczek/php-file-cache": "^0.0.4"
     },
     "autoload": {
         "classmap": ["app/"],
         "psr-4": { 
             "Config\\": "app/config",
             "Common\\": "app/common",
-            "Exception\\": "app/exception",
-            "Lib\\": "app/lib",
+            "System\\": "app/system",
             "Model\\": "app/model",
             "View\\": "app/view",
             "": "app/api"
