--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
+        "mikecao/flight": "^1.3",
         "firebase/php-jwt": "^5.0",
         "wruczek/php-file-cache": "^0.0.4"
     }
