Some modifications included
Test api modified
Console page updated
Read me file updated

--- a/app/config/config_app.ini
+++ b/app/config/config_app.ini
@@ -62,7 +62,11 @@ DB_TIMEZONE = 'Asia/Dhaka'
 ;;                Cache Server Configuration
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
-; Local Cache Flag [ 0=OFF , 1=ON ]
+; Server Cache Enable/Disable Flag [ 0=OFF , 1=ON ]
+SERVER_CACHE = 1
+
+; Local Cache Enable/Disable Flag [ 0=OFF , 1=ON ]
+; If Disabled, Memcache System will Take Over Server Caching [ if Enabled ]
 LOCAL_CACHE_FLAG = 1
 
 ; Local Cache Filepath 
