User Session comlexity reduced

--- a/app/config/example.config_app.ini
+++ b/app/config/example.config_app.ini
@@ -12,6 +12,9 @@ PRODUCTION_ENV = 0
 ; Request Token Key Passed in HTTP Header
 REQUEST_TOKEN_HEADER_KEY = 'X-API-TOKEN'
 
+; Session Key in HTTP Header
+USER_SESSION_HEADER_KEY = 'X-USER-SESSION-ID'
+
 ; Token Verification Secret Key e.g XXX111
 REQUEST_TOKEN_SECRET = ''
 
