--- a/app/config/example.config_app.ini
+++ b/app/config/example.config_app.ini
@@ -9,23 +9,11 @@ ENV = 'development'
 ; Server Production Status
 PRODUCTION_ENV = 0
 
-; Request Token Key Passed in HTTP Header
-REQUEST_TOKEN_HEADER_KEY = 'X-API-TOKEN'
-
-; Session Key in HTTP Header
-USER_SESSION_HEADER_KEY = 'X-USER-SESSION-ID'
-
-; Token Verification Secret Key e.g XXX111
-REQUEST_TOKEN_SECRET = ''
-
 ; Client / Server Application Version
 CLIENT_VERSION = '1'
 
 ; Client Application Download Location e.g https://play.google.com/store/apps/details?id=com.google.android.googlequicksearchbox
 CLIENT_UPDATE_LOCATION = ''
-
-; Token Verification Flag [ 0=OFF , 1=ON ]
-CHECK_REQUEST_TOKEN = 1
 
 ; Detailed Exception Flag [ 0=OFF , 1=ON ]
 ERROR_DUMP = 1
@@ -35,6 +23,22 @@ MAINTENANCE = 0
 
 ; Support Email Address
 SUPPORT_MAIL_TO = 'support@example.com'
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;; HTTP Header Key Configuation
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+; Token Verification Flag [ 0=OFF , 1=ON ]
+CHECK_REQUEST_TOKEN = 1
+
+; Request Token Key Passed in HTTP Header
+REQUEST_TOKEN_HEADER_KEY = 'X-API-TOKEN'
+
+; Session Key in HTTP Header
+USER_SESSION_HEADER_KEY = 'X-USER-SESSION-ID'
+
+; Token Verification Secret Key e.g XXX111
+REQUEST_TOKEN_SECRET = ''
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;;                Database Configuration
