--- a/app/config/example.config_app.ini
+++ b/app/config/example.config_app.ini
@@ -13,7 +13,11 @@ PRODUCTION_ENV = 0
 CLIENT_VERSION = '1'
 
 ; Client Application Download Location e.g https://play.google.com/store/apps/details?id=com.google.android.googlequicksearchbox
-CLIENT_UPDATE_LOCATION = ''
+CLIENT_UPDATE_LOCATION_ANDROID = ''
+
+CLIENT_UPDATE_LOCATION_iOS = ''
+
+CLIENT_UPDATE_LOCATION_WindowsApp = ''
 
 ; Detailed Exception Flag [ 0=OFF , 1=ON ]
 ERROR_DUMP = 1
