--- a/app/config/example.config_app.ini
+++ b/app/config/example.config_app.ini
@@ -25,6 +25,9 @@ ERROR_DUMP = 1
 ; Server Maintenance Mode Flag [ 0=OFF , 1=ON ]
 MAINTENANCE = 0
 
+; Server Test User ID
+TEST_USER_ID = 1
+
 ; Support Email Address
 SUPPORT_MAIL_TO = 'support@example.com'
 
@@ -33,7 +36,7 @@ SUPPORT_MAIL_TO = 'support@example.com'
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 ; Token Verification Flag [ 0=OFF , 1=ON ]
-CHECK_REQUEST_TOKEN = 1
+CHECK_REQUEST_TOKEN = 0
 
 ; Request Token Key Passed in HTTP Header
 REQUEST_TOKEN_HEADER_KEY = 'X-API-TOKEN'
@@ -67,7 +70,7 @@ DB_PORT = ''
 DB_SET_TIMEZONE = 0
 
 ; Server + Database Timezone
-DB_TIMEZONE = 'Asia/Dhaka'
+SERVER_TIMEZONE = 'Asia/Dhaka'
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;;                Cache Server Configuration
