--- a/app/config/example.config_app.ini
+++ b/app/config/example.config_app.ini
@@ -6,7 +6,7 @@
 ; Server Environment
 ENV = 'development'
 
-; Server Production Status
+; Server Production Status [ 0=OFF , 1=ON ]
 PRODUCTION_ENV = 0
 
 ; Client / Server Application Version
