--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -6,11 +6,23 @@ $finder = PhpCsFixer\Finder::create()
 
 return PhpCsFixer\Config::create()
     ->setRules([
-        '@PSR2' => true,
+        '@PhpCsFixer' => true,
         'braces' => array(
         'allow_single_line_closure' => true,
         'position_after_functions_and_oop_constructs' => 'same',
         ),
+        'array_syntax' => array(
+            'syntax' => 'short'
+        ),
+        'cast_spaces' => array(
+            'space' => 'single'
+        ),
+        'combine_consecutive_unsets' => true,
+        'elseif' => true,
+        'function_typehint_space' => true,
+        'single_line_comment_style' => array(
+            'comment_types' => array('asterisk', 'hash')
+        )
     ])
     ->setFinder($finder)
 ;
