Minor system updated
cache related bug fix
documentation updated
api test feature updated
base model class updated
changelog updated for new version

--- a/app/config/example.config_app.ini
+++ b/app/config/example.config_app.ini
@@ -76,8 +76,13 @@ SERVER_TIMEZONE = 'Asia/Dhaka'
 ;;                Cache Server Configuration
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
-; Local Cache Flag [ 0=OFF , 1=ON ]
-LOCAL_CACHE_FLAG = 0
+; Server Cache Enable/Disable Flag [ 0=OFF , 1=ON ]
+; If Disabled, File cache / Memcaching both will be disabled
+SERVER_CACHE_ENABLE_FLAG = 0
+
+; Local Cache Enable/Disable Flag [ 0=OFF , 1=ON ]
+; If Disabled, Memcache System will Take Over Server Caching [ if Enabled ]
+FILE_CACHE_FLAG = 1
 
 ; Local Cache Filepath 
 LOCAL_CACHE_PATH = 'C:\xampp\htdocs\rest-api\cache'
