--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "mikecao/flight": "^1.3",
         "firebase/php-jwt": "^5.0",
-        "wruczek/php-file-cache": "^0.0.4"
+        "wruczek/php-file-cache": "^0.0.4",
+        "phpunit/phpunit": "^8.5"
     }
 }
