Added testing module
Unit testing implemented based on phpunit library

--- a/app/config/app_config.ini
+++ b/app/config/app_config.ini
@@ -41,9 +41,6 @@ CHECK_REQUEST_TOKEN = 1
 ; Request Token Key Passed in HTTP Header
 REQUEST_TOKEN_HEADER_KEY = 'X-API-TOKEN'
 
-; Session Key in HTTP Header
-USER_SESSION_HEADER_KEY = 'X-USER-SESSION-ID'
-
 ; Token Verification Secret Key e.g XXX111
 REQUEST_TOKEN_SECRET = '0123456789'
 
@@ -85,7 +82,7 @@ SERVER_CACHE_ENABLE_FLAG = 1
 FILE_CACHE_FLAG = 0
 
 ; Local Cache Filepath 
-LOCAL_CACHE_PATH = 'C:\DevPrograms\xampp\htdocs\solid-rest-api\cache'
+LOCAL_CACHE_PATH = 'C:\DevPrograms\xampp\htdocs\rest-api-flight\cache'
 
 ; Memcache Key Prefix
 MEMCACHE_PREFIX = 'solid_api_'
@@ -104,27 +101,5 @@ MEMCACHED_PORT = '11211'
 APPLICATION_LOG = 1
 
 ; Server Application Log Filepath
-LOG_FILE_PATH = 'C:\DevPrograms\xampp\htdocs\solid-rest-api\log'
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+LOG_FILE_PATH = 'C:\DevPrograms\xampp\htdocs\rest-api-flight\log'
 
