--- a/app/config/app_config.ini
+++ b/app/config/app_config.ini
@@ -7,7 +7,7 @@
 ENV = 'development'
 
 ; Server Host URL
-BASE_URL = 'http://solid-rest-api.me'
+BASE_URL = 'http://akash.test'
 
 ; Server Production Status [ 0=OFF , 1=ON ]
 PRODUCTION_ENV = 0
