--- a/app/config/example.app_config.ini
+++ b/app/config/example.app_config.ini
@@ -13,7 +13,7 @@ BASE_URL = 'http://akash.test'
 PRODUCTION_ENV = 0
 
 ; Client / Server Application Version
-CLIENT_VERSION = '1'
+CLIENT_VERSION = '2'
 
 ; Client Application Download Location e.g https://play.google.com/store/apps/details?id=com.google.android.googlequicksearchbox
 CLIENT_STORE_LOCATION_ANDROID = ''
@@ -52,7 +52,7 @@ REQUEST_TOKEN_SECRET = '0123456789'
 DB_HOST = 'localhost'
 
 ; Database Name
-DB_NAME = 'rest-api'
+DB_NAME = 'akaash-rest-api'
 
 ; Database User name
 DB_USER = 'root'
@@ -82,10 +82,10 @@ SERVER_CACHE_ENABLE_FLAG = 1
 FILE_CACHE_FLAG = 0
 
 ; Local Cache Filepath 
-LOCAL_CACHE_PATH = 'C:\DevPrograms\xampp\htdocs\rest-api-flight\cache'
+LOCAL_CACHE_PATH = 'C:\xampp\htdocs\akaash-rest-api\cache'
 
 ; Memcache Key Prefix
-MEMCACHE_PREFIX = 'solid_api_'
+MEMCACHE_PREFIX = 'akaash_api_'
 
 ; Memcache Host Name
 MEMCACHED_HOST = 'localhost'
@@ -101,5 +101,5 @@ MEMCACHED_PORT = '11211'
 APPLICATION_LOG = 1
 
 ; Server Application Log Filepath
-LOG_FILE_PATH = 'C:\DevPrograms\xampp\htdocs\rest-api-flight\log'
+LOG_FILE_PATH = 'C:\xampp\htdocs\akaash-rest-api\log'
 
