--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
         "mikecao/flight": "^1.3",
         "firebase/php-jwt": "^5.0",
         "wruczek/php-file-cache": "^0.0.4",
-        "phpunit/phpunit": "^8.5"
+        "phpunit/phpunit": "^8.5",
+        "squizlabs/php_codesniffer": "*"
     }
 }
