--- a/app/config/example.app_config.ini
+++ b/app/config/example.app_config.ini
@@ -15,7 +15,7 @@ PRODUCTION_ENV = 0
 ; Client / Server Application Version
 CLIENT_VERSION = '2'
 
-; Client Application Download Location e.g https://play.google.com/store/apps/details?id=com.google.android.googlequicksearchbox
+; Client Application Download Location eg. https://play.google.com/store/apps/details?id=com.google.android.googlequicksearchbox
 CLIENT_STORE_LOCATION_ANDROID = ''
 CLIENT_STORE_LOCATION_iOS = ''
 
@@ -102,5 +102,6 @@ APPLICATION_LOG = 1
 
 ; Server Application Log Filepath
 LOG_FILE_PATH = 'C:\xampp\htdocs\akaash-rest-api\log'
+
 
 
