--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,5 @@ before_script:
 
 script:
 - echo "build travis"    
-- phpunit --exclude-group FITS --bootstrap vendor/autoload.php tests
+- phpcs --standard=PSR2 .\app\
+
