--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,12 @@ matrix:
   - php: 7.2
 
 before_script:
-- composer install -y
+- composer install
 
 script:
 - echo "build travis" 
-- sudo apt-get install -y php7.2-{memcache,memcached} && sudo apt-get install libapache2-mod-php memcached curl  -y
+- sudo apt-get install php7.2-{memcache,memcached} && sudo apt-get install libapache2-mod-php memcached curl
 - composer update
 - pwd
 - mv ./app/config/example.app_config.ini ./app/config/app_config.ini
+
