--- a/app/config/example.app_config.ini
+++ b/app/config/example.app_config.ini
@@ -82,7 +82,7 @@ SERVER_CACHE_ENABLE_FLAG = 1
 FILE_CACHE_FLAG = 1
 
 ; Local Cache Filepath 
-LOCAL_CACHE_PATH = 'C:\xampp\htdocs\akaash-rest-api\cache'
+LOCAL_CACHE_PATH = '/home/travis/build/sabbir-rupom/akaash-rest-api/cache'
 
 ; Memcache Key Prefix
 MEMCACHE_PREFIX = 'akaash_api_'
@@ -101,7 +101,8 @@ MEMCACHED_PORT = '11211'
 APPLICATION_LOG = 1
 
 ; Server Application Log Filepath
-LOG_FILE_PATH = 'C:\xampp\htdocs\akaash-rest-api\log'
+LOG_FILE_PATH = '/home/travis/build/sabbir-rupom/akaash-rest-api/log'
+
 
 
 
