--- a/app/config/example.app_config.ini
+++ b/app/config/example.app_config.ini
@@ -49,10 +49,10 @@ REQUEST_TOKEN_SECRET = '0123456789'
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 ; Database Host name
-DB_HOST = 'localhost'
+DB_HOST = '127.0.0.1'
 
 ; Database Name
-DB_NAME = 'akaash-rest-api'
+DB_NAME = 'akaash_test'
 
 ; Database User name
 DB_USER = 'root'
@@ -102,6 +102,7 @@ APPLICATION_LOG = 1
 
 ; Server Application Log Filepath
 LOG_FILE_PATH = '/home/travis/build/sabbir-rupom/akaash-rest-api/log'
+
 
 
 
