--- a/app/config/example.app_config.ini
+++ b/app/config/example.app_config.ini
@@ -52,7 +52,7 @@ REQUEST_TOKEN_SECRET = '0123456789'
 DB_HOST = '127.0.0.1'
 
 ; Database Name
-DB_NAME = 'akaash_test'
+DB_NAME = 'akaash-rest-api'
 
 ; Database User name
 DB_USER = 'root'
@@ -102,8 +102,3 @@ APPLICATION_LOG = 1
 
 ; Server Application Log Filepath
 LOG_FILE_PATH = '/home/travis/build/sabbir-rupom/akaash-rest-api/log'
-
-
-
-
-
